fixed spacing in mobile menu

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -422,8 +422,7 @@ ul li {
   }
 }
 .content .hero .strip2 {
-  display: grid;
-  grid-gap: 14px;
+  margin-bottom: 24px;
 }
 .content .hero .strip2 .story {
   display: grid;
@@ -517,6 +516,9 @@ ul li {
   .content .menu {
     display: grid;
     margin-top: 24px;
+  }
+  .content .menu article {
+    margin-bottom: 8px;
   }
   .content .menu .title {
     margin-bottom: 16px;
